[gd_scene load_steps=51 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/WillowBoombox.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/MainMusic/Nihilogue/Willow the Tarots.ogg" type="AudioStream" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/PsychBackground.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/WillowTable.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/WillowCarpet.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/TableTexturePixel.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/TarotCard01.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Scenes/WillowsHouse.gd" type="Script" id=8]
[ext_resource path="res://RainIsoMainContents/Resources/WillowsPillow.png" type="Texture" id=9]
[ext_resource path="res://RainIsoMainContents/Resources/WillowTheMushBirdBack.png" type="Texture" id=10]
[ext_resource path="res://RainIsoMainContents/Scenes/WillowTheMushBird.tscn" type="PackedScene" id=11]
[ext_resource path="res://RainIsoMainContents/Resources/WillowTileset.png" type="Texture" id=12]
[ext_resource path="res://RainIsoMainContents/Resources/PotOfFlower.png" type="Texture" id=13]
[ext_resource path="res://RainIsoMainContents/Scenes/TopDownPlayer.tscn" type="PackedScene" id=14]
[ext_resource path="res://RainIsoMainContents/Resources/WillowTV.png" type="Texture" id=15]
[ext_resource path="res://RainIsoMainContents/Resources/WillowFridge.png" type="Texture" id=16]
[ext_resource path="res://RainIsoMainContents/MainMusic/Nihilogue/Psycillow.ogg" type="AudioStream" id=17]
[ext_resource path="res://RainIsoMainContents/Scenes/TarotBattleSystem.tscn" type="PackedScene" id=18]
[ext_resource path="res://RainIsoMainContents/Scenes/Settings.tscn" type="PackedScene" id=19]
[ext_resource path="res://RainIsoMainContents/Scenes/Pause.tscn" type="PackedScene" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 152, 10 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 0, 32, 32, 32, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=22]
0/name = "WillowTileset.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 510, Vector2( 4, 1 ), 447, Vector2( 5, 0 ), 507, Vector2( 5, 1 ), 255 ]
0/autotile/icon_coordinate = Vector2( 3, 3 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 117.333, 26.4935 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 14, 18 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 60.7169, 36.1669 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 65.3048, 35.6841 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 32, 56 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 32, 168 )

[sub_resource type="Animation" id=29]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Carpet:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=30]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Audio/Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="WillowsHouse" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 736.0
color = Color( 0.2, 0.117647, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="TextureRect" parent="Background"]
modulate = Color( 1, 0.764706, 0.521569, 1 )
margin_right = 1280.0
margin_bottom = 736.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1280.0
margin_bottom = 736.0
rect_pivot_offset = Vector2( 640, 320 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="ColorRect" parent="."]
margin_left = 480.0
margin_right = 800.0
margin_bottom = 72.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area" type="Area2D" parent="Exit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit/Area"]
position = Vector2( 160, 16 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 22 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -196596, 0, 0, -196595, 0, 1, -196594, 0, 1, -196593, 0, 1, -196592, 0, 1, -196591, 0, 1, -196590, 0, 1, -196589, 0, 1, -196588, 0, 1, -196587, 0, 1, -196586, 0, 1, -196585, 0, 1, -196584, 0, 1, -196583, 0, 1, -196582, 0, 1, -196581, 0, 2, -131060, 0, 65536, -131059, 0, 65537, -131058, 0, 65537, -131057, 0, 65537, -131056, 0, 65537, -131055, 0, 65537, -131054, 0, 65537, -131053, 0, 65537, -131052, 0, 65537, -131051, 0, 65537, -131050, 0, 65537, -131049, 0, 65537, -131048, 0, 65537, -131047, 0, 65537, -131046, 0, 65537, -131045, 0, 65538, -65524, 0, 65536, -65523, 0, 65537, -65522, 0, 65541, -65521, 0, 131073, -65520, 0, 131073, -65519, 0, 131073, -65518, 0, 131073, -65517, 0, 131073, -65516, 0, 131073, -65515, 0, 131073, -65514, 0, 131073, -65513, 0, 131073, -65512, 0, 131073, -65511, 0, 65540, -65510, 0, 65537, -65509, 0, 65538, 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 4, 13, 0, 65537, 14, 0, 65538, 25, 0, 65536, 26, 0, 65537, 27, 0, 5, 28, 0, 1, 29, 0, 1, 30, 0, 1, 31, 0, 1, 32, 0, 1, 33, 0, 1, 34, 0, 1, 35, 0, 1, 36, 0, 1, 37, 0, 1, 38, 0, 1, 39, 0, 2, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65538, 65561, 0, 65536, 65562, 0, 65537, 65563, 0, 65537, 65564, 0, 65537, 65565, 0, 65537, 65566, 0, 65537, 65567, 0, 65537, 65568, 0, 65537, 65569, 0, 65537, 65570, 0, 65537, 65571, 0, 65537, 65572, 0, 65537, 65573, 0, 65537, 65574, 0, 65537, 65575, 0, 65538, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65538, 131097, 0, 65536, 131098, 0, 65537, 131099, 0, 65537, 131100, 0, 65537, 131101, 0, 65537, 131102, 0, 65537, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 65537, 131108, 0, 65537, 131109, 0, 65537, 131110, 0, 65537, 131111, 0, 65538, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65541, 196611, 0, 131073, 196612, 0, 131073, 196613, 0, 131073, 196614, 0, 131073, 196615, 0, 131073, 196616, 0, 131073, 196617, 0, 131073, 196618, 0, 131073, 196619, 0, 131073, 196620, 0, 131073, 196621, 0, 131073, 196622, 0, 131074, 196633, 0, 131072, 196634, 0, 131073, 196635, 0, 131073, 196636, 0, 131073, 196637, 0, 131073, 196638, 0, 131073, 196639, 0, 131073, 196640, 0, 131073, 196641, 0, 131073, 196642, 0, 131073, 196643, 0, 131073, 196644, 0, 131073, 196645, 0, 65540, 196646, 0, 65537, 196647, 0, 65538, 262144, 0, 65536, 262145, 0, 65537, 262146, 0, 65538, 262181, 0, 65536, 262182, 0, 65537, 262183, 0, 65538, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65538, 327717, 0, 65536, 327718, 0, 65537, 327719, 0, 65538, 393216, 0, 65536, 393217, 0, 65537, 393218, 0, 65538, 393253, 0, 65536, 393254, 0, 65537, 393255, 0, 65538, 458752, 0, 65536, 458753, 0, 65537, 458754, 0, 65538, 458789, 0, 65536, 458790, 0, 65537, 458791, 0, 65538, 524288, 0, 65536, 524289, 0, 65537, 524290, 0, 65538, 524325, 0, 65536, 524326, 0, 65537, 524327, 0, 65538, 589824, 0, 65536, 589825, 0, 65537, 589826, 0, 65538, 589861, 0, 65536, 589862, 0, 65537, 589863, 0, 65538, 655360, 0, 65536, 655361, 0, 65537, 655362, 0, 65538, 655397, 0, 65536, 655398, 0, 65537, 655399, 0, 65538, 720896, 0, 65536, 720897, 0, 65537, 720898, 0, 65538, 720933, 0, 65536, 720934, 0, 65537, 720935, 0, 65538, 786432, 0, 65536, 786433, 0, 65537, 786434, 0, 65538, 786469, 0, 65536, 786470, 0, 65537, 786471, 0, 65538, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65538, 852005, 0, 65536, 852006, 0, 65537, 852007, 0, 65538, 917504, 0, 65536, 917505, 0, 65537, 917506, 0, 65538, 917541, 0, 65536, 917542, 0, 65537, 917543, 0, 65538, 983040, 0, 65536, 983041, 0, 65537, 983042, 0, 65538, 983077, 0, 65536, 983078, 0, 65537, 983079, 0, 65538, 1048576, 0, 65536, 1048577, 0, 65537, 1048578, 0, 65538, 1048613, 0, 65536, 1048614, 0, 65537, 1048615, 0, 65538, 1114112, 0, 65536, 1114113, 0, 65537, 1114114, 0, 65538, 1114149, 0, 65536, 1114150, 0, 65537, 1114151, 0, 65538, 1179648, 0, 65536, 1179649, 0, 65537, 1179650, 0, 65538, 1179685, 0, 65536, 1179686, 0, 65537, 1179687, 0, 65538, 1245184, 0, 65536, 1245185, 0, 65537, 1245186, 0, 65538, 1245221, 0, 65536, 1245222, 0, 65537, 1245223, 0, 65538, 1310720, 0, 65536, 1310721, 0, 65537, 1310722, 0, 5, 1310723, 0, 1, 1310724, 0, 1, 1310725, 0, 1, 1310726, 0, 1, 1310727, 0, 1, 1310728, 0, 1, 1310729, 0, 1, 1310730, 0, 1, 1310731, 0, 1, 1310732, 0, 1, 1310733, 0, 1, 1310734, 0, 1, 1310735, 0, 1, 1310736, 0, 1, 1310737, 0, 1, 1310738, 0, 1, 1310739, 0, 1, 1310740, 0, 1, 1310741, 0, 1, 1310742, 0, 1, 1310743, 0, 1, 1310744, 0, 1, 1310745, 0, 1, 1310746, 0, 1, 1310747, 0, 1, 1310748, 0, 1, 1310749, 0, 1, 1310750, 0, 1, 1310751, 0, 1, 1310752, 0, 1, 1310753, 0, 1, 1310754, 0, 1, 1310755, 0, 1, 1310756, 0, 1, 1310757, 0, 4, 1310758, 0, 65537, 1310759, 0, 65538, 1376256, 0, 65536, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65537, 1376292, 0, 65537, 1376293, 0, 65537, 1376294, 0, 65537, 1376295, 0, 65538, 1441792, 0, 131072, 1441793, 0, 131073, 1441794, 0, 131073, 1441795, 0, 131073, 1441796, 0, 131073, 1441797, 0, 131073, 1441798, 0, 131073, 1441799, 0, 131073, 1441800, 0, 131073, 1441801, 0, 131073, 1441802, 0, 131073, 1441803, 0, 131073, 1441804, 0, 131073, 1441805, 0, 131073, 1441806, 0, 131073, 1441807, 0, 131073, 1441808, 0, 131073, 1441809, 0, 131073, 1441810, 0, 131073, 1441811, 0, 131073, 1441812, 0, 131073, 1441813, 0, 131073, 1441814, 0, 131073, 1441815, 0, 131073, 1441816, 0, 131073, 1441817, 0, 131073, 1441818, 0, 131073, 1441819, 0, 131073, 1441820, 0, 131073, 1441821, 0, 131073, 1441822, 0, 131073, 1441823, 0, 131073, 1441824, 0, 131073, 1441825, 0, 131073, 1441826, 0, 131073, 1441827, 0, 131073, 1441828, 0, 131073, 1441829, 0, 131073, 1441830, 0, 131073, 1441831, 0, 131074 )

[node name="Carpet" type="Sprite" parent="."]
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
position = Vector2( 640, 352 )
scale = Vector2( 17.125, 13.7083 )
texture = ExtResource( 5 )

[node name="Pillow3" type="Sprite" parent="."]
modulate = Color( 0.701961, 0.596078, 0.929412, 1 )
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
position = Vector2( 690.606, 243.572 )
texture = ExtResource( 9 )

[node name="Pillow" type="Sprite" parent="."]
modulate = Color( 0.701961, 0.596078, 0.929412, 1 )
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
position = Vector2( 621.394, 232.857 )
texture = ExtResource( 9 )

[node name="Pillow2" type="Sprite" parent="."]
modulate = Color( 0.701961, 0.596078, 0.929412, 1 )
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
position = Vector2( 656, 256 )
texture = ExtResource( 9 )

[node name="Table01" type="Sprite" parent="."]
position = Vector2( 640, 336 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Table01"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table01/StaticBody2D"]
position = Vector2( 0, -10.6667 )
shape = SubResource( 23 )

[node name="Table02" type="Sprite" parent="."]
position = Vector2( 160, 448 )
rotation = -1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Table02"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table02/StaticBody2D"]
position = Vector2( 0, -10.6667 )
shape = SubResource( 23 )

[node name="Table03" type="Sprite" parent="."]
position = Vector2( 1120, 448 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Table03"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table03/StaticBody2D"]
position = Vector2( 0, -10.6667 )
shape = SubResource( 23 )

[node name="Item" type="Sprite" parent="."]
modulate = Color( 0.701961, 0.596078, 0.929412, 1 )
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
position = Vector2( 147, 330.083 )
scale = Vector2( 3.625, 3.36979 )
texture = ExtResource( 13 )

[node name="Item2" type="Sprite" parent="."]
modulate = Color( 0.701961, 0.596078, 0.929412, 1 )
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
position = Vector2( 744, 320 )
rotation = -1.5708
scale = Vector2( 3.625, 3.36979 )
texture = ExtResource( 1 )

[node name="TV" type="Sprite" parent="."]
modulate = Color( 0.701961, 0.596078, 0.929412, 1 )
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
position = Vector2( 960, 80 )
texture = ExtResource( 15 )

[node name="Fridge" type="Sprite" parent="."]
modulate = Color( 0.701961, 0.596078, 0.929412, 1 )
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
position = Vector2( 288, 104 )
scale = Vector2( 4, 4 )
texture = ExtResource( 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="Fridge"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fridge/StaticBody2D"]
position = Vector2( -7.62939e-06, -4 )
shape = SubResource( 24 )

[node name="TarotActivation" type="Area2D" parent="."]
position = Vector2( 655.747, 230.606 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TarotActivation"]
shape = SubResource( 25 )

[node name="TarotActivationSecond" type="Area2D" parent="."]
position = Vector2( 655.747, 230.606 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TarotActivationSecond"]
shape = SubResource( 25 )
disabled = true

[node name="TarotTryAgain" type="Area2D" parent="."]
position = Vector2( 659.411, 230.712 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TarotTryAgain"]
shape = SubResource( 26 )
disabled = true

[node name="FridgeArea" type="Area2D" parent="."]
position = Vector2( 288, 200 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FridgeArea"]
shape = SubResource( 25 )

[node name="TVArea" type="Area2D" parent="."]
position = Vector2( 960, 168 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TVArea"]
shape = SubResource( 25 )

[node name="FlowerArea" type="Area2D" parent="."]
position = Vector2( 224, 336 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlowerArea"]
shape = SubResource( 27 )

[node name="TableArea" type="Area2D" parent="."]
position = Vector2( 1048, 440 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TableArea"]
shape = SubResource( 28 )

[node name="TarotCards" type="Node2D" parent="."]

[node name="Card01" type="Sprite" parent="TarotCards"]
position = Vector2( 512, 320 )
scale = Vector2( 1.83333, 2 )
texture = ExtResource( 7 )

[node name="Card02" type="Sprite" parent="TarotCards"]
position = Vector2( 560, 320 )
scale = Vector2( 1.83333, 2 )
texture = ExtResource( 7 )

[node name="Card03" type="Sprite" parent="TarotCards"]
position = Vector2( 608, 320 )
scale = Vector2( 1.83333, 2 )
texture = ExtResource( 7 )

[node name="Audio" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[node name="Psycillow" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 17 )
volume_db = -80.0
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/up = SubResource( 29 )

[node name="WillowTheMushBird" parent="." instance=ExtResource( 11 )]
position = Vector2( 640, 368 )
scale = Vector2( 4, 4 )

[node name="Sprite" parent="WillowTheMushBird" index="0"]
texture = ExtResource( 10 )
flip_h = true

[node name="CollisionShape2D" parent="WillowTheMushBird" index="1"]
visible = true
position = Vector2( 0, -2.20282 )

[node name="TopDownPlayer" parent="." instance=ExtResource( 14 )]
position = Vector2( 640, 112 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="TarotBattleSystem" parent="." instance=ExtResource( 18 )]

[node name="BattlePlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 30 )

[node name="OptionsMenu" parent="." instance=ExtResource( 19 )]

[node name="Pause" parent="." instance=ExtResource( 20 )]

[connection signal="body_entered" from="Exit/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="TarotActivation" to="." method="_on_TarotActivation_body_entered"]
[connection signal="body_exited" from="TarotActivation" to="." method="_on_TarotActivation_body_exited"]
[connection signal="body_entered" from="TarotActivationSecond" to="." method="_on_TarotActivationSecond_body_entered"]
[connection signal="body_exited" from="TarotActivationSecond" to="." method="_on_TarotActivationSecond_body_exited"]
[connection signal="body_entered" from="TarotTryAgain" to="." method="_on_TarotTryAgain_body_entered"]
[connection signal="body_exited" from="TarotTryAgain" to="." method="_on_TarotTryAgain_body_exited"]
[connection signal="body_entered" from="FridgeArea" to="." method="_on_FridgeArea_body_entered"]
[connection signal="body_exited" from="FridgeArea" to="." method="_on_FridgeArea_body_exited"]
[connection signal="body_entered" from="TVArea" to="." method="_on_TVArea_body_entered"]
[connection signal="body_exited" from="TVArea" to="." method="_on_TVArea_body_exited"]
[connection signal="body_entered" from="FlowerArea" to="." method="_on_FlowerArea_body_entered"]
[connection signal="body_exited" from="FlowerArea" to="." method="_on_FlowerArea_body_exited"]
[connection signal="body_entered" from="TableArea" to="." method="_on_TableArea_body_entered"]
[connection signal="body_exited" from="TableArea" to="." method="_on_TableArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="ls" from="TarotBattleSystem" to="." method="_on_TarotBattleSystem_ls"]

[editable path="WillowTheMushBird"]
[editable path="TarotBattleSystem"]
